--- a/Entia.Test/Entia.Test.csproj
+++ b/Entia.Test/Entia.Test.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
     <Configurations>Debug;Release;Debug VS;Release VS</Configurations>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
